# spotify-api

./: .gitignore  LICENSE  README.md  docker-compose.yaml
queue-app/: index.html  package-lock.json  package.json
queue-app/src/: App.css  App.tsx  index.css  main.tsx
server/: Cargo.toml
server/src/: configuration.rs  database.rs  error.rs  main.rs
server/src/api/: mod.rs  spotify.rs  state.rs
server/src/clients/: spotify.rs
